--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,13 @@
 
         <activity
             android:name="com.kevinputro.musicplayer.view.MusicPlayerActivity"
-            android:configChanges="locale"
+            android:launchMode="singleTop"
             android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
             <intent-filter android:autoVerify="true">
                 <category android:name="android.intent.category.DEFAULT" />
