feat(musicplayer): Add api call logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,5 +31,5 @@ version_name=0.1.0
 version_code=1
 version_code_dev=1
 #region app url
-base_api_url_dev=https://api-staging.rey.id/
-base_api_url_production=https://api.rey.id/
+base_api_url_dev=https://itunes.apple.com/
+base_api_url_production=https://itunes.apple.com/
